# gorkycode_backend

./: .env  .env.example  .gitignore  docker-compose.yml  go.mod  go.sum  readme.md
cmd/main/: main.go
gorkycode_backend/: .env.example  Dockerfile
gorkycode_backend/cmd/main/: main.go
gorkycode_backend/internal/adapters/postgres/: db.go  route_repository.go  user_repository.go
gorkycode_backend/internal/app/: app.go
gorkycode_backend/internal/config/: config.go
gorkycode_backend/internal/models/: user.go
gorkycode_backend/internal/services/: route_service.go
gorkycode_backend/internal/utils/: jwt.go  logger.go
gorkycode_frontend/css/: autorize.css  final_destination.css  main.css  personal_account.css
gorkycode_frontend/html/: favourite_dest.html  finaldest.html  index.html  login.html  personal_account.html  registration.html  test.html
gorkycode_frontend/js/: auth.js  main.js  page_loader.js  yandex_maps.js
gorkycode_ml/: .gitignore  Dockerfile  Dockerfile.db  docker-compose.yml  pyproject.toml  requirements.txt  testLog.py
gorkycode_ml/src/: beta.py  main.py  test.py
gorkycode_ml/src/MODEL/: model.py
gorkycode_ml/src/OSRM/: location.py  route_planner.py
gorkycode_ml/src/RETRIEVER/: Dockerfile  retriever.py
gorkycode_ml/src/config/: config.yml
gorkycode_ml/src/data/: cultural_objects_mnn.csv
internal/adapters/postgres/: db.go  route_repository.go  user_repository.go
internal/app/: app.go
internal/config/: config.go
internal/delivery/http/: router.go
internal/delivery/http/handlers/: auth_handler.go  createRouteHandler.go  loader_handler.go  loginHandler.go  (+2 more)
internal/models/: route.go  user.go
internal/services/: auth_service.go  route_service.go
(+5 files in other folders)
