[project]
name = "gokycode"
version = "0.1.0"
description = ""
authors = [
    {name = "Vlad",email = "burovin123@yandex.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "flagembedding (>=1.3.5,<2.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "ollama (>=0.6.0,<0.7.0)",
    "ortools (>=9.14.6206,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
